<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8F8F7"
    android:orientation="vertical"
    tools:context=".feedback">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="121dp"

        android:gravity="center_horizontal"
        android:text="@string/tfeedback"
        android:textColor="#062283"
        android:textSize="34sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="105dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tuname"
            android:layout_width="165dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/tusername"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/funame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:background="@drawable/inputbp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="105dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/temail"
            android:layout_width="165dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/email"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/femail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:background="@drawable/inputbp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="81dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tfeedback"
            android:layout_width="165dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/feedback"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/feedback"
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView23"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:gravity="center_horizontal"
        android:text="@string/rate_your_experience"
        android:textSize="30sp" />

    <RatingBar
        android:id="@+id/rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:numStars="5" />

    <Button
        android:id="@+id/fsubmit"
        android:layout_width="148dp"
        android:layout_height="59dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:text="@string/submit"
        android:textSize="20sp" />

</LinearLayout>